<resources>
    <string name="app_name">看診取號機</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="save">Save</string>
    <string name="backspace">Backspace</string>
    <string name="enter">Enter</string>
    <string name="or">Or</string>
    <string name="got_it">Got It</string>
    <string name="present_card_remind">Please insert NHI Card to take a number before seeing a doctor</string>
    <string name="health_card">NHI Card</string>
    <string name="national_id">CID No.</string>
    <string name="chart_no">MR No.</string>
    <string name="phone_no">Phone No.</string>
    <string name="present_health_card">Please insert %1$s to %2$s</string>
    <string name="present_health_card_arg_check_in">Check In</string>
    <string name="present_health_card_arg_take_no">Take No.</string>
    <string name="present_health_card_auto_appointment_addition"> / Appointment</string>
    <string name="check_in_item_display_name">Division name</string>
    <string name="check_in_item_manual_title">No NHI Card</string>
    <string name="check_in_item_manual_body">Manual Take No.</string>
    <string name="check_in_item_virtual_title">Virtual NHI Card</string>
    <string name="check_in_item_virtual_body">Take No.</string>
    <string name="check_in_type_manual">Manual enter</string>
    <string name="check_in_type_custom">Division</string>
    <string name="check_in_type_virtual_card">Virtual NHI Card</string>
    <string name="national_id_input_title">If you don\'t have NHI Card, you can enter %s</string>
    <string name="national_id_input_hint">Please enter %s</string>
    <string name="national_id_input_separation">, </string>
    <string name="national_id_format_invalid">%s format invalid</string>
    <string name="national_id_input_cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="printer_not_connect">Please connect ticket machine</string>
    <string name="get_patient_not_found">Can not find appointment information for this National ID</string>
    <string name="clinic_data_not_found">Clinic Not Found</string>
    <string name="delete_item_title">Are you sure want to delete this item?</string>
    <string name="print_serial_no">No.</string>
    <string name="print_footer">Please follow the number\nand wait for processing</string>
    <string name="checking">Checking…</string>
    <string name="success_to_check">Checked in successfully</string>
    <string name="success_to_check_message">Please remember to take number</string>
    <string name="fail_to_check">Failed to checked in</string>
    <string name="schedule_not_found">Appointment not found</string>
    <string name="make_appointment_now">Do you want to take number?</string>
    <string name="select_schedules_title">Please select division to make an appointment</string>
    <string name="make_appointment">The way to take number</string>
    <string name="make_appointment_right_now">Click to taking number</string>
    <string name="make_appointment_message">Please insert %s, or manual enter %s</string>
    <string name="success_to_make_appointment">Taking number successfully</string>
    <string name="success_to_make_appointment_message">Please remember take number and wait for your number to be called.</string>
    <string name="fail_to_make_appointment">Failed to checked in</string>
    <string name="fail_to_make_appointment_10014">Now is not the time to take number</string>
    <string name="fail_to_card_reading">Card data reading failure,\nplease wipe the chip and try again</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="password">Password</string>
    <string name="ui_settings">UI Setting</string>
    <string name="server_domain">Service domain</string>
    <string name="org_id">Clinic ID</string>
    <string name="doctors">Doctor ID</string>
    <string name="rooms">Division ID</string>
    <string name="clinic_panel_url">Clinic Panel Url</string>
    <string name="format_checked">Check In Setting</string>
    <string name="dept_id">Room ID</string>
    <string name="check_update">Check Update</string>
    <string name="open_system_settings">Open System Setting</string>
    <string name="version_of_the_app">Version %s</string>
    <string name="exit_app">Exit App</string>
    <string-array name="setting_items">
        <item>@string/ui_settings</item>
        <item>@string/server_domain</item>
        <item>@string/org_id</item>
        <item>@string/doctors</item>
        <item>@string/rooms</item>
        <item>@string/dept_id</item>
        <item>@string/queueing_board_setting</item>
        <item>@string/queueing_machine_setting</item>
        <item>@string/format_checked</item>
        <item>@string/automatic_appointment_setting</item>
        <item>@string/language_setting</item>
        <item>@string/check_update</item>
        <item>@string/open_system_settings</item>
        <item>@string/version_of_the_app</item>
        <item>@string/exit_app</item>
    </string-array>
    <string name="automatic_appointment_title_list">Cannot found your appointment</string>
    <string name="automatic_appointment_title_detail">Please confirm your appointment</string>
    <string name="automatic_appointment_prompt">Please select a doctor to appoint</string>
    <string name="automatic_appointment_cancel">Cancel</string>
    <string name="automatic_appointment_redo">Redo</string>
    <string name="automatic_appointment_confirm">Confirm</string>
    <string name="ui_settings_machine_title">Machine Title</string>
    <string name="ui_settings_insert_nhi_card_animation">Show Insert NHI Card Animation</string>
    <string name="ui_settings_manual_input">Manual Input</string>
    <string name="ui_settings_hint">Mode Settings (Max. 4 modes)</string>
    <string name="ui_settings_virtual_nhi_card">Virtual NHI Card</string>
    <string name="ui_settings_customized_one">Customized 1</string>
    <string name="ui_settings_customized_two">Customized 2</string>
    <string name="ui_settings_customized_three">Customized 3</string>
    <string name="ui_settings_customized_four">Customized 4</string>
    <string name="ui_settings_customized_block_name">Block Name</string>
    <string name="ui_settings_customized_action">Action</string>
    <string name="ui_settings_customized_doctor_id">Doctor ID</string>
    <string name="ui_settings_customized_room_id">Division ID</string>
    <string name="dialog_id_label">ID</string>
    <string name="dialog_url_label">URL</string>
    <string name="dialog_description">To enter multiple ID, use commas to separate each ID. </string>
    <string name="dialog_enable_label">Enable</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_save_button">Save</string>
    <string name="dialog_ok_button">OK</string>
    <string name="customize_url_hint" translatable="false">http://example.com</string>
    <string name="domain_service_official_site">Official Site</string>
    <string name="domain_service_testing_site">Testing Site</string>
    <string name="domain_service_customize">Customize</string>
    <string name="queueing_board_setting">Queuing Board Setting</string>
    <string name="qbs_screen_rotation_label">Screen Rotation</string>
    <string name="qbs_screen_edit_text_label">Queueing Board URL</string>
    <string name="queueing_machine_setting">Queuing Machine Setting</string>
    <string name="qms_ticket_information">Ticket Information</string>
    <string name="qms_time_label">Time</string>
    <string name="qms_dept_label">Dept.</string>
    <string name="qms_doctor_label">Doctor</string>
    <string name="qms_organization_label">Organization</string>
    <string name="qms_one_ticket_label">All information in one ticket</string>
    <string name="qms_ticket_print_size_label">Ticket Print Size</string>
    <string name="qms_ticket_print_size_57">57 mm</string>
    <string name="qms_ticket_print_size_76">76 mm</string>
    <string name="version_setting">Version Setting</string>
    <string name="language_setting">Language</string>
    <string name="version_setting_dialog_select_version_label">Select Version</string>
    <string name="version_setting_dialog_select_language_label">Select Language</string>
    <string name="zh_tw_language">繁體中文</string>
    <string name="en_language">English</string>
    <string-array name="language_items">
        <item>@string/zh_tw_language</item>
        <item>@string/en_language</item>
    </string-array>
    <string name="no_internet">No Internet</string>
    <string name="service_timeout">Connect Timeout</string>
    <string name="automatic_appointment_setting">Automatic Appointment Setting</string>
    <string name="automatic_appointment_setting_error_empty_field">that field shouldn\'t be empty</string>
    <string name="automatic_appointment_single_mode">Single mode</string>
    <string name="automatic_appointment_multiple_mode">multiple mode</string>
    <string name="automatic_appointment_setting_automatic_check_in">Automatic Check-In</string>
    <string name="update_software_dialog_title">Software Update</string>
    <string name="update_software_dialog_text_checking_for_updates">Checking for updates…</string>
    <string name="update_software_dialog_text_downloading">Downloading…</string>
    <string name="update_software_dialog_update_is_not_available">There no new version</string>
    <string name="update_software_dialog_downloaded">Downloaded </string>
    <string name="update_software_dialog_permission">This app doesn\'t have permission for installing apps do you want to give permission for app?</string>
    <string name="unexpected_error">Error</string>
    <string name="is_selected_language_checker_image_description">is selected language checker</string>
    <string name="scheduler_dialog_status_appointable">Appointable</string>
    <string name="scheduler_dialog_status_full">FULL</string>
    <string name="scheduler_dialog_status_closed">Closed</string>
    <string name="scheduler_dialog_status_stop_appoint">Stop appoint</string>
    <string name="mScheduler_api_error_10001">The key field can not be blank</string>
    <string name="mScheduler_api_error_10002">Organization Not Found</string>
    <string name="mScheduler_api_error_10003">The specified doctor cannot be found.</string>
    <string name="mScheduler_api_error_10004">Division Not Found</string>
    <string name="mScheduler_api_error_10005">Patient name can not be blank</string>
    <string name="mScheduler_api_error_10006">Patient mobile can not be blank</string>
    <string name="mScheduler_api_error_10007">Patient date of birth is invalid</string>
    <string name="mScheduler_api_error_10008">Patient national id can not be blank</string>
    <string name="mScheduler_api_error_10009">Time shift format is wrong</string>
    <string name="mScheduler_api_error_10010">Data not found，please re-enter number or contact service staff, thanks.</string>
    <string name="mScheduler_api_error_10011">Check-in time has passed</string>
    <string name="mScheduler_api_error_10012">It is not yet time for check-in at %s. Please proceed to the check-in area or contact the service personnel before %s.</string>
    <string name="mScheduler_api_error_10013">Duplicate check-in. If you have any issues, please contact the service staff</string>
    <string name="mScheduler_api_error_10014">Currently, this service is not available.</string>
    <string name="mScheduler_api_error_10014_ptch_ca"><![CDATA[Please retrieve your number again during <font color=\'#E54B4B\'>every Wednesday from 13:00 to 17:00</font>.]]></string>
    <string name="mScheduler_api_error_10015">The registration quota has been reached. Please contact the service staff for assistance.</string>
</resources>