<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/setting_dialog_width"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/org_id"
                android:textColor="@color/black"
                android:textSize="40sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_id_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_clinic_id_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/id_input_border"
                    android:padding="20dp"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:textSize="24sp" />

            </LinearLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/btn_change_clinic_id_dialog_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_cancel_button"
                    android:background="@android:color/transparent"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    />

                <Button
                    android:id="@+id/btn_change_clinic_id_dialog_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_save_button"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</LinearLayout>