<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/setting_dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_big">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/automatic_appointment_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/automatic_appointment_setting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_h2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/space_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_enable_label"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_h4" />


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/automatic_appointment_setting_switcher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:saveEnabled="true"
                        android:scaleX="@dimen/switcher_scale"
                        android:scaleY="@dimen/switcher_scale" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/automatic_appointment_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checkedButton="@id/automatic_appointment_single_mode"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/space_medium"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <RadioButton
                        android:id="@+id/automatic_appointment_single_mode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/automatic_appointment_single_mode"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_h4" />

                    <RadioButton
                        android:id="@+id/automatic_appointment_multiple_mode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/automatic_appointment_multiple_mode"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_h4" />

                </RadioGroup>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/automatic_appointment_setting_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/automatic_appointment_doctor_input_field"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_marginVertical="@dimen/space_normal"
                        android:hint="@string/doctors"
                        android:singleLine="true"
                        android:textColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textSize="@dimen/font_size_h4" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/automatic_appointment_room_input_field"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:hint="@string/rooms"
                        android:singleLine="true"
                        android:textColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textSize="@dimen/font_size_h4" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/automatic_appointment_dialog_cancel_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/dialog_cancel_button"
                        android:textColor="@color/red"
                        android:textSize="@dimen/font_size_h3" />

                    <Button
                        android:id="@+id/automatic_appointment_dialog_save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/dialog_save_button"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_h3" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>