<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/setting_dialog_width"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/space_big">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="title"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_h2"
                />

            <TextView
                android:id="@+id/dialog_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space_normal"
                android:text="@string/dialog_description"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_h4"
                android:visibility="gone"/>

            <RadioGroup
                android:layout_marginTop="10dp"
                android:id="@+id/dialog_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/domain_service_official_site"
                android:padding="@dimen/space_medium"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/domain_service_official_site"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_h4"
                    android:textColor="@color/black"
                    android:text="@string/domain_service_official_site"/>

                <RadioButton
                    android:id="@+id/domain_service_testing_site"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_h4"
                    android:textColor="@color/black"
                    android:text="@string/domain_service_testing_site"/>

                <RadioButton
                    android:id="@+id/domain_service_customize"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_h4"
                    android:textColor="@color/black"
                    android:text="@string/domain_service_customize"/>

            </RadioGroup>


            <LinearLayout
                android:id="@+id/dialog_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/dialog_text_input_label"
                    android:layout_marginVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="example label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_size_h4"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/dialog_input_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/id_input_border"
                    android:hint=""
                    android:padding="@dimen/space_normal"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_h4"
                    android:textColor="@color/black"/>

            </LinearLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/dialog_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_cancel_button"
                    android:background="@android:color/transparent"
                    android:textColor="@color/red"
                    android:textSize="@dimen/font_size_h3"
                    />

                <Button
                    android:id="@+id/dialog_save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_save_button"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_size_h3"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</LinearLayout>