<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/setting_dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/space_big"
            android:orientation="vertical">

            <TextView
                android:id="@+id/update_software_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_software_dialog_title"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_h2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/update_software_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_marginEnd="@dimen/space_normal"/>

                <TextView
                    android:id="@+id/update_software_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/space_normal"
                    android:text="@string/update_software_dialog_text_checking_for_updates"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_h2"
                    android:visibility="visible" />

            </LinearLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/update_software_dialog_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/dialog_cancel_button"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_size_h3" />

                <Button
                    android:id="@+id/update_software_dialog_ok_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/dialog_ok_button"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_size_h3"
                    android:visibility="gone"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</LinearLayout>